# mlcast

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE-BSD  README.md  config.yaml  original_config.yaml  plan.md  pyproject.toml
MagicMock/build().trainer.default_root_dir/250526138244928/: config.yaml
MagicMock/build().trainer.default_root_dir/268884048600416/: config.yaml
api_reference/: mlcast_api.py  pl_ref.py  pysteps_ref.py
docs/: autoencoder.md  generate_base_experiment_config_diagram.py  ldcast.md  ldm.md
examples/: config.ipynb
examples/scripts/: download_mlcast_dataset_sample.py  simple_train.py
logs/mlcast/version_0/: config.yaml  events.out.tfevents.1776444546.CM-F16RXCV0WY.41515.0
src/mlcast/: __init__.py  __main__.py  callbacks.py  configs.py  losses.py  nowcasting_module.py  utils.py  visualization.py
src/mlcast/config/: __init__.py  base.py  consistency_checks.py  demo.py  fiddlers.py  loader.py  orchestrator.py
src/mlcast/data/: __init__.py  normalization.py  source_data_datamodule.py  source_data_datasets.py  source_data_module.py  source_datasets.py  splits.py  zarr_datamodule.py  zarr_dataset.py
src/mlcast/models/: __init__.py  base.py  convgru.py  convgru_modules.py
src/mlcast/models/ldcast/: data.py  distributions.py  ldcast.py  original_weights.py  utils.py
src/mlcast/models/ldcast/autoenc/: autoenc.py  encoder.py
src/mlcast/models/ldcast/blocks/: afno.py  attention.py  resnet.py
src/mlcast/models/ldcast/context/: context.py  nowcast.py
src/mlcast/models/ldcast/diffusion/: diffusion.py  ema.py  plms.py  scheduler.py  simple_sampler.py  unet.py  utils.py
src/mlcast/models/ldcast/transforms/: antialiasing.py
src/mlcast/modules/: __init__.py  convgru_modules.py
tests/: conftest.py  test_cli_training.py  test_fixture.py  test_losses.py  test_readme_snippets.py
tests/config/: test_cli_examples.py  test_consistency_checks.py  test_fiddlers.py  test_orchestrator.py
tests/data/: test_data_module.py  test_normalization.py  test_source_data_datasets.py  test_source_datasets.py
tests/models/: test_convgru.py
