[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "mlcast"
version = "0.0.1"
description = "mlcast nowcasting package"
readme = "README.md"
authors = [
  { name = "Gabriele Franch", email = "franch@fbk.eu" },
  { name = "Leif Denby" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "lightning>=2.5.2",
  "torch>=2.7.1",
  "xarray>=2025.6.1",
]

optional-dependencies.dev = [
  "pre-commit>=3.5",
  "ruff>=0.8",
]
scripts.mlcast = "mlcast:main"

[tool.ruff]
line-length = 120
exclude = [ "docs/**/*_.py" ]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warnings
]
lint.ignore = [  ]

[tool.mypy]
strict = false
mypy_path = "src"
explicit_package_bases = true
exclude = [
  "docs/.*",
]
