[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "mlcast"
version = "0.0.1a5"
description = "Machine learning weather nowcasting library"
readme = "README.md"
keywords = [ "machine-learning", "meteorology", "nowcasting", "precipitation", "pytorch", "radar", "weather" ]
license = { text = "Apache-2.0" }
maintainers = [
  { name = "MLCast Community", email = "franch@fbk.eu" },
]
authors = [
  { name = "Gabriele Franch", email = "franch@fbk.eu" },
  { name = "Leif Denby", email = "lcd@dmi.dk" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
  "absl-py>=2.4",
  "beartype>=0.18",
  "cf-xarray>=0.10",
  "etils>=1.13",
  "fiddle>=0.3",
  "fire>=0.7",
  "importlib-resources>=5",
  "ipykernel>=6.29.5",
  "jaxtyping>=0.2",
  "loguru>=0.7.3",
  "mlflow>=3.11.1",
  "numpy>=2.2.6",
  "pandas>=2",
  "pytorch-lightning>=2",
  "pyyaml>=6",
  "s3fs>=2026.3",
  "tensorboard>=2.20",
  "torch>=2.7.1",
  "torchvision>=0.20",
  "xarray>=2025.6.1",
  "zarr>=3",
]

optional-dependencies.dev = [
  "aiohttp>=3.9.3",
  "fsspec>=2024.2",
  "mypy>=1",
  "pre-commit>=3.5",
  "pytest>=8",
  "pytest-cov>=4.1",
  "ruff>=0.8",
  "s3fs>=2024.2",
]
optional-dependencies.gpu-cu128 = [
  "torch>=2.7.1",
  "torchvision>=0.20",
]
optional-dependencies.gpu-cu130 = [
  "torch>=2.7.1",
  "torchvision>=0.20",
]
urls.Documentation = "https://github.com/mlcast-community/mlcast"
urls.Homepage = "https://github.com/mlcast-community/mlcast"
urls.Issues = "https://github.com/mlcast-community/mlcast/issues"
urls.Repository = "https://github.com/mlcast-community/mlcast"

scripts.mlcast = "mlcast.__main__:cli"

[dependency-groups]
mlflow = [
  "nvidia-ml-py>=13.595.45",
  "psutil>=7",
]

[tool.ruff]
line-length = 120
exclude = [ "docs/**/*_.py" ]

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warnings
]
lint.ignore = [ "F722" ]

[tool.mypy]
strict = false
mypy_path = "src"
explicit_package_bases = true
exclude = [
  "docs/.*",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
conflicts = [
  [
    { extra = "gpu-cu128" },
    { extra = "gpu-cu130" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "gpu-cu128" },
  { index = "pytorch-cu130", extra = "gpu-cu130" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "gpu-cu128" },
  { index = "pytorch-cu130", extra = "gpu-cu130" },
]
